change project structure + create proxy server

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES2022"
     },
     "exclude": [
-        "./node_modules",
+        "client/node_modules",
         "**/node_modules/*"
     ]
 }
