--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
-        "target": "ES2022"
+        "target": "ES2022",
+        "moduleResolution": "nodenext",
+        "resolveJsonModule": true
     },
     "exclude": [
         "client/node_modules",
