--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "checkJs": true,
         "target": "ES2022",
         "moduleResolution": "nodenext",
         "resolveJsonModule": true
