--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "type": "module",
   "dependencies": {
-    "fluent-reveal-effect": "^3.0.11",
-    "gridstack": "^7.2.3"
+    "fluent-reveal-effect": "^3.0.11"
   }
 }
