--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -7,7 +7,8 @@
         "module": "ESNext",
         "baseUrl": ".",
         "paths": {
-            "#lang": ["src/lang.js"]
+            "#lang": ["src/lang.js"],
+            "#utilities": ["src/utilities.js"],
         }
     },
     "exclude": [
